src/test/deca/context/invalid/created/wrong_type_condition_while_FLOAT.deca
{
    while (5.6) {
        println("true");
    } else {
        println("false");
    }
}